[gd_scene load_steps=11 format=3 uid="uid://cmlw7rt3qypjb"]

[ext_resource type="FontFile" uid="uid://bbc5b2ody45vr" path="res://resources/fonts/KaushanScript-Regular.otf" id="2_8mo1g"]
[ext_resource type="FontFile" uid="uid://dqj3kl2spwtkw" path="res://resources/fonts/Kenney Blocks.ttf" id="3_217rd"]
[ext_resource type="Script" uid="uid://d3g55x0xe88x2" path="res://gameover/credits.gd" id="3_mn72n"]
[ext_resource type="FontFile" uid="uid://dasrxrrurr323" path="res://resources/fonts/Kenney Pixel Square.ttf" id="4_gc7tn"]
[ext_resource type="Texture2D" uid="uid://5n84e57l8sk4" path="res://entities/player/assets/goma.png" id="6_qbb33"]
[ext_resource type="Texture2D" uid="uid://7nwjf0eqcdu5" path="res://entities/player/assets/cape_default.png" id="7_sd10d"]
[ext_resource type="Texture2D" uid="uid://c7410lk0nipo" path="res://entities/player/assets/mask_default.png" id="8_3dkdu"]

[sub_resource type="LabelSettings" id="LabelSettings_m5nh7"]
font = ExtResource("2_8mo1g")
font_size = 100

[sub_resource type="LabelSettings" id="LabelSettings_gc7tn"]
font = ExtResource("3_217rd")
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_w4cji"]
font = ExtResource("4_gc7tn")
font_size = 30

[node name="Credits" type="CanvasLayer"]
script = ExtResource("3_mn72n")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
color = Color(0, 0, 0, 0)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -422.0
offset_top = -351.0
offset_right = 404.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollingContent" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollingContent"]
layout_mode = 2
size_flags_horizontal = 4
text = "Game Over"
label_settings = SubResource("LabelSettings_m5nh7")

[node name="Label2" type="Label" parent="VBoxContainer/ScrollingContent"]
layout_mode = 2
size_flags_horizontal = 4
text = "Thank You for Playing"
label_settings = SubResource("LabelSettings_gc7tn")

[node name="Label3" type="Label" parent="VBoxContainer/ScrollingContent"]
layout_mode = 2
size_flags_horizontal = 4
text = "
Made by JD & AL

Assets: https://kenney.nl/ 
SFX + Music: opengameart.org
Source: https://github.com/uging/ggj2026"
label_settings = SubResource("LabelSettings_w4cji")
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="CharacterControl" type="Control" parent="."]
custom_minimum_size = Vector2(200, 200)
layout_mode = 3
anchors_preset = 0
offset_left = 434.0
offset_top = 445.0
offset_right = 634.0
offset_bottom = 645.0

[node name="CharacterAnchor" type="Node2D" parent="CharacterControl"]
position = Vector2(100, 140)

[node name="Goma" type="Sprite2D" parent="CharacterControl/CharacterAnchor"]
position = Vector2(0, -8)
scale = Vector2(0.172, 0.195)
texture = ExtResource("6_qbb33")

[node name="Cape" type="Sprite2D" parent="CharacterControl/CharacterAnchor"]
position = Vector2(-21, -7)
scale = Vector2(0.172, 0.195)
texture = ExtResource("7_sd10d")

[node name="Mask" type="Sprite2D" parent="CharacterControl/CharacterAnchor"]
position = Vector2(8, -27)
scale = Vector2(0.114, 0.122)
texture = ExtResource("8_3dkdu")

[node name="ButtonContainer" type="HBoxContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -50.0
offset_right = 96.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 30

[node name="MainMenuButton" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_gc7tn")
text = "Back to Main"

[node name="ExitButton" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_gc7tn")
text = "Exit"

[connection signal="pressed" from="ButtonContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="ButtonContainer/ExitButton" to="." method="_on_exit_button_pressed"]
